<resources>
    <string name="app_name">KleverFruits</string>
    <string name="pagkagename_provider">com.example.kleverfruits.fileprovider</string>
    <string name="home">Trang chủ</string>
    <string name="search">Tìm kiếm</string>
    <string name="add_point">Tích điểm</string>
    <string name="notification">Thông báo</string>
    <string name="cart">Giỏ hàng</string>
    <string name="edit_profile">Chỉnh sửa tài khoản</string>
    <string name="signup">ĐĂNG KÝ</string>
    <string name="login">ĐĂNG NHẬP</string>
    <string name="member_big">THÀNH VIÊN</string>
    <string name="bonus_member_big">ƯU ĐÃI THÀNH VIÊN</string>
    <string name="sale_product_big">HÀNG ĐANG SALE</string>
    <string name="new_order_big">HÀNG MỚI VỀ</string>
    <string name="_manage_order_big">QUẢN LÝ ĐƠN HÀNG</string>
    <string name="abount_us">Về chúng tôi</string>
    <string name="shop_offices">Hệ thống cửa hàng</string>
    <string name="beauty_of_life">Vẻ đẹp cuộc sống</string>
    <string name="sale">Sale</string>
    <string name="level_gift">Đẳng cấp quà tặng</string>
    <string name="level_fruits">Đẳng cấp trái cây</string>
    <string name="input_keyword_search">Gõ từ khoá tìm kiếm</string>
    <string name="festival_american_grape_big">LỄ HỘI NHO MỸ</string>
    <string name="flash_sale_big">FLASH SALE</string>
    <string name="new_fruits_big">TRÁI CÂY MỚI VỀ</string>
    <string name="album_klever_big">BỘ SƯU TẬP KLEVER</string>
    <string name="beauty_of_life_big">VẺ ĐẸP CUỘC SỐNG</string>
    <string name="join_event_big">KHÁM PHÁ SỰ KIỆN</string>
    <string name="level_gift_big">ĐẲNG CẤP QUÀ TẶNG</string>
    <string name="list_store_big">HỆ THỐNG CỬA HÀNG</string>
    <string name="list_store">Hệ thống cửa hàng</string>
    <string name="find_address_near">Tìm kiếm địa chỉ gần bạn</string>
    <string name="region_hanoi">Khu vực Hà Nội</string>
    <string name="region_hcm">Khu vực Hồ Chí Minh</string>
    <string name="list_data_store_big">DANH SÁCH CỬA HÀNG</string>
    <string name="login_account">Đăng nhập tài khoản</string>
    <string name="fullname">Họ và tên</string>
    <string name="username_or_email">Tên đăng nhập hoặc email</string>
    <string name="password">Mật khẩu</string>
    <string name="do_you_have_account">Bạn chưa có tài khoản?</string>
    <string name="sign_up_now">Đăng ký ngay</string>
    <string name="revert_password">Khôi phục mật khẩu</string>
    <string name="do_you_forgot_password">Bạn quên mật khẩu?</string>
    <string name="signup_account">Đăng ký tài khoản</string>
    <string name="email">Email</string>
    <string name="signup_by_gmail">Đăng nhập bằng Gmail</string>
    <string name="did_you_have_account">Bạn đã có tài khoản?</string>
    <string name="login_small">Đăng nhập</string>
    <string name="close">Đóng lại</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="info_account">Thông tin tài khoản</string>
    <string name="address">Địa chỉ</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="sex">Giới tính</string>
    <string name="birthday">Ngày sinh</string>
    <string name="phone">Số điện thoại</string>
    <string name="logout_big">ĐĂNG XUẤT</string>
    <string name="done_big">DONE</string>
    <string name="update">Cập nhật</string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="reinput_new_password">Nhập lại mật khẩu</string>
    <string name="get_from_gallery">Chọn ảnh</string>
    <string name="capture">Chụp ảnh</string>
    <string name="select">Lựa chọn</string>
    <string name="level_fruits_big">ĐẲNG CẤP TRÁI CÂY</string>
    <string name="input_keyword_search_product">Gõ từ khoá sản phẩm tìm kiếm</string>
    <string name="find_product">Tìm kiếm sản phẩm</string>
    <string name="flash_sale">Flash sale</string>
    <string name="money_unit">VNĐ</string>
    <string name="new_fruits">Trái cây mới về</string>
    <string name="all">Tất cả</string>
    <string name="gift_health_big">QUÀ TẶNG TRÁI CÂY SỨC KHOẺ</string>
    <string name="gift_boss_big">QUÀ TẶNG ĐỒNG NGHIỆP VÀ SẾP</string>
    <string name="gift_love_big">QUÀ TẶNG TÌNH YÊU</string>
    <string name="contact_cskh">Liên hệ CSKH</string>
    <string name="product_code">Mã sản phẩm</string>
    <string name="from">Xuất xứ</string>
    <string name="status">Tình Trạng</string>
    <string name="unit">Đơn vị tính</string>
    <string name="count">Số lượng</string>
    <string name="please_check_address">Bạn hãy chọn địa chỉ nhận hàng để được dự báo thời gian giao hàng một cách chính
        xác nhất.
    </string>
    <string name="add_address">Nhập địa chỉ</string>
    <string name="chat_now">Chat ngay</string>
    <string name="add_to_cart">Thêm vào Giỏ hàng</string>
    <string name="buy_now_big">MUA NGAY</string>
    <string name="detail_info">Thông tin chi tiết</string>
    <string name="my_order">Đơn hàng của tôi</string>
    <string name="canceled">Đã huỷ</string>
    <string name="shipped">Đã giao</string>
    <string name="shipping">Đang giao</string>
    <string name="waiting_confirm">Chờ xác nhận</string>
    <string name="order_code">Mã đơn hàng</string>
    <string name="all_">Tổng cộng:</string>
    <string name="payed">Đã thanh toán</string>
    <string name="not_pay">Chưa thanh toán</string>
    <string name="product_small">sản phẩm</string>
    <string name="order_detail">Chi tiết đơn hàng</string>
    <string name="address_get_product">Địa chỉ nhận hàng</string>
    <string name="copy_big">SAO CHÉP</string>
    <string name="transit_info">Thông tin vận chuyển</string>
    <string name="view_big">XEM</string>
    <string name="type_pay">Phương thức thanh toán</string>
    <string name="total_cost">Tổng số tiền</string>
    <string name="ship_cost">Phí ship</string>
    <string name="total_product_cost">Tổng tiền hàng</string>
    <string name="sale_code">Mã giảm giá</string>
    <string name="note_big">GHI CHÚ</string>
    <string name="continue_buy">Tiếp tục mua hàng</string>
    <string name="untick">Bỏ chọn</string>
    <string name="apply_big">ÁP DỤNG</string>
    <string name="pay_at_home">Thanh toán tại nhà</string>
    <string name="pay_by_bank">Chuyển khoản qua ngân hàng</string>
    <string name="pay_by_atm">Thanh toán qua atm</string>
    <string name="pay_by_momo">Thanh toán qua Momo</string>
    <string name="pay_by_moca">Thanh toán qua Moca</string>
    <string name="order_success">Đặt hàng thành công</string>
    <string name="free_support">Tư vấn miễn phí</string>
    <string name="come_back_home_big">VỀ TRANG CHỦ</string>
    <string name="please_select">Xin lựa chọn</string>
    <string name="klever_bonus">Ưu đãi Klever</string>
    <string name="bonus_from_partner">Ưu đãi từ đối tác</string>
    <string name="bonus_from_klever">Ưu đãi của Klever</string>
    <string name="point">điểm</string>
    <string name="send_gift">Gửi tặng</string>
    <string name="sale_date_use">Hạn sử dụng</string>
    <string name="sale_date_use_">Hạn sử dụng:</string>
    <string name="convert_point">Đổi điểm</string>
    <string name="convert_point_big">ĐỔI ĐIỂM</string>
    <string name="convert_this_bonus">Đổi lấy ưu đãi này !</string>
    <string name="convert_with">Đổi với %1$s điểm?</string>
    <string name="cancel_big">HUỶ</string>
    <string name="confirm_big">XÁC NHẬN</string>
    <string name="happenned">Đã diễn ra</string>
    <string name="upcoming">Sắp diễn ra</string>
    <string name="happenning">Đang diễn ra</string>
    <string name="member_info">Thông tin thành viên</string>
    <string name="point_can_use">Điểm có thể sử dụng</string>
    <string name="bonus_point_history">Lịch sử điểm thưởng</string>
    <string name="how_to_save_bonus_point">Cách tích luỹ điểm thưởng</string>
    <string name="my_bonus">Ưu đãi của tôi</string>
    <string name="detail">Chi tiết</string>
    <string name="view_details">Xem các ưu đãi</string>
    <string name="member">Thành viên</string>
    <string name="diamound">Bạch kim</string>
    <string name="sliver">Bạc</string>
    <string name="gold">Vàng</string>
    <string name="check_more">Tìm hiểu thêm</string>
    <string name="schedule_quota">Tiến độ hạn mức</string>
    <string name="you_opened_this_level">Bạn đã mở hạng này</string>
    <string name="you_opened_this_level_detail">Đổi quà thưởng không làm ảnh hưởng đến tiến độ nâng hạng của bạn
    </string>
    <string name="klever_fruits_member">Thành viên Klever Fruits</string>
    <string name="sliver_bonus">Bạc Quyền Lợi</string>
    <string name="gold_bonus">Vàng Quyền Lợi</string>
    <string name="diamound_bonus">Bạch Kim Quyền Lợi</string>
</resources>
