<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:background="@color/background_main"
                  android:padding="@dimen/_15sdp"
                  android:orientation="vertical"
                  android:id="@+id/layout_title_cart">

        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        >
            <ImageView android:layout_width="@dimen/_20sdp" android:layout_height="@dimen/_20sdp"
                       android:id="@+id/img_back_cart"
                       app:srcCompat="@drawable/ic_back"
                       android:padding="@dimen/_3sdp"
                       android:layout_centerVertical="true"/>

            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:gravity="center"
                      android:text="@string/cart"
                      android:textColor="@color/white"
                      android:fontFamily="@font/roboto_regular"
                      android:textSize="@dimen/_16sdp"/>
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
    >
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ryv_cart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
        android:layout_above="@+id/layout_bottom"/>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layout_bottom"
        android:layout_alignParentBottom="true">
        <View android:layout_width="match_parent" android:layout_height="1dp"
              android:background="@color/view_line_gray"/>
        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:padding="@dimen/_15sdp">

            <ImageView android:layout_width="@dimen/_15sdp" android:layout_height="@dimen/_15sdp"
                       app:srcCompat = "@drawable/ic_money"
                       android:layout_marginRight="@dimen/_2sdp"
                       android:layout_centerVertical="true"
                       android:id="@+id/img_money"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:layout_gravity="center_vertical"
                      android:text="@string/type_pay"
                      android:textColor="@color/text_black_333"
                      android:textSize="@dimen/_12sdp"
                      android:fontFamily="@font/roboto_regular"
                      android:gravity="left"
                      android:layout_toRightOf="@+id/img_money"
            android:id="@+id/txt_title_type_pay"/>

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:layout_gravity="right"
                      android:text="@string/please_select"
                      android:textColor="@color/text_black_333"
                      android:textSize="@dimen/_11sdp"
                      android:fontFamily="@font/roboto_regular"
                      android:gravity="right"
                      android:id="@+id/txt_type_pay"
                      android:layout_toRightOf="@+id/txt_title_type_pay"

            android:layout_toLeftOf="@+id/img_type_pay"
            android:layout_centerVertical="true"/>
            <ImageView android:layout_width="@dimen/_12sdp" android:layout_height="@dimen/_12sdp"
            app:srcCompat = "@drawable/ic_next"
            android:tint="@color/text_black_333"
            android:layout_alignParentRight="true"
            android:id="@+id/img_type_pay"
            android:layout_centerVertical="true"/>
        </RelativeLayout>

        <View android:layout_width="match_parent" android:layout_height="1dp"
              android:background="@color/view_line_gray"/>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:background="@color/white"
                      android:padding="@dimen/_15sdp">
            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:layout_gravity="center_vertical"
                          android:text="@string/total_product_cost"
                          android:textColor="@color/text_black_333"
                          android:textSize="@dimen/_12sdp"
                          android:fontFamily="@font/roboto_regular"
                          android:gravity="left"/>

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:layout_gravity="right"
                          android:text="122222222"
                          android:textColor="@color/text_black_333"
                          android:textSize="@dimen/_12sdp"
                          android:fontFamily="@font/roboto_regular"
                          android:gravity="left"
                          android:layout_alignParentRight="true"
                          android:id="@+id/txt_total_product_cost"/>
            </RelativeLayout>
            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp">
                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:layout_gravity="center_vertical"
                          android:text="@string/ship_cost"
                          android:textColor="@color/text_black_333"
                          android:textSize="@dimen/_12sdp"
                          android:fontFamily="@font/roboto_regular"
                          android:gravity="left"/>

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:layout_gravity="right"
                          android:text="0 VND"
                          android:textColor="@color/text_black_333"
                          android:textSize="@dimen/_12sdp"
                          android:fontFamily="@font/roboto_regular"
                          android:gravity="left"
                          android:layout_alignParentRight="true"
                          android:id="@+id/txt_ship_cost"/>
            </RelativeLayout>
            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp">
                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:layout_gravity="center_vertical"
                          android:text="@string/sale_code"
                          android:textColor="@color/text_black_333"
                          android:textSize="@dimen/_12sdp"
                          android:fontFamily="@font/roboto_regular"
                          android:gravity="left"/>

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:layout_gravity="right"
                          android:text="@string/apply_big"
                          android:textColor="@color/background_main"
                          android:textSize="@dimen/_12sdp"
                          android:fontFamily="@font/roboto_regular"
                          android:gravity="left"
                          android:layout_alignParentRight="true"
                          android:id="@+id/txt_sale_code"/>
            </RelativeLayout>
            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:layout_gravity="center_vertical"
                          android:text="@string/total_cost"
                          android:textColor="@color/text_black_333"
                          android:textSize="@dimen/_12sdp"
                          android:fontFamily="@font/roboto_regular"
                          android:gravity="bottom"
                          android:layout_centerVertical="true"/>

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:layout_gravity="right"
                          android:text="22222222"
                          android:textColor="@color/background_main"
                          android:textSize="@dimen/_14sdp"
                          android:fontFamily="@font/roboto_bold"
                          android:gravity="center_vertical"
                          android:layout_alignParentRight="true"
                          android:id="@+id/txt_total_cost"
                          android:layout_centerVertical="true"/>
            </RelativeLayout>
        </LinearLayout>
        <View android:layout_width="match_parent" android:layout_height="1dp"
              android:background="@color/view_line_gray"/>

            <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
            android:background="@color/background_main"
            android:padding="@dimen/_5sdp">
                <ImageView android:layout_width="@dimen/_30sdp" android:layout_height="@dimen/_30sdp"
                android:id="@+id/img_back_cart_bottom"
                app:srcCompat = "@drawable/ic_vector_back"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:layout_centerVertical="true"/>

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:layout_gravity="center_vertical"
                          android:text="@string/continue_buy"
                          android:textColor="@color/white"
                          android:textSize="@dimen/_12sdp"
                          android:fontFamily="@font/roboto_regular"
                          android:gravity="left"
                          android:layout_toRightOf="@+id/img_back_cart_bottom"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_5sdp"/>

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:layout_gravity="center_vertical"
                          android:text="@string/buy_now_big"
                          android:textColor="@color/background_main"
                          android:textSize="@dimen/_12sdp"
                          android:fontFamily="@font/roboto_regular"
                          android:gravity="left"
                          android:layout_centerVertical="true"
                          android:layout_alignParentRight="true"
                android:background="@drawable/custom_dialog_white"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:paddingLeft="@dimen/_30sdp"
                android:paddingRight="@dimen/_30sdp"
                android:id="@+id/txt_buy_now_cart"/>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>